.parcel-cache added to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,16 +4,23 @@ node_modules/
 # Ignorera byggfiler och cache
 dist/
 .cache/
+.parcel-cache/
+/src/dist
+
+# Systemfiler (förhindrar oavsiktliga commits av operativsystemfiler)
+.DS_Store
+Thumbs.db
 
 # Andra tillfälliga filer
 *.log/
+npm-debug.log*
 
 # Miljöfiler
 .env
-# som t.ex.:
-# .env.local
-# .env.production
-# .env.test
+.env.local
+.env.*.local
+.env.production
+.env.test
 
 # Konfigureringsfiler med känsliga data
 # som t.ex.:
