--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/sarasjodin/boilerplate-sv_parcel-npm#readme",
   "devDependencies": {
     "parcel": "^2.13.3",
+    "prettier": "^3.4.2",
     "svgo": "^3.3.2"
   }
 }
